# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/media_library/media_library.gni")

ohos_shared_library("mediaserviceext") {
  include_dirs = [
    "./include",
    "./include/bg_task_processor",
    "${MEDIALIB_UTILS_PATH}/include",
    "./include/bg_task_processor/aging_task",
    "./include/bg_task_processor/bg_generate_thumbnail_task",
    "./include/bg_task_processor/compatible_with_gallery_task",
    "./include/bg_task_processor/dfx_task",
    "./include/bg_task_processor/preserve_db_task",
    "./include/bg_task_processor/repair_dirty_data_task",
    "${MEDIALIB_SERVICES_PATH}/media_cloud_sync/include",
  ]

  sources = [
    "./src/bg_task_processor/aging_task/delete_temporary_photos_processor.cpp",
    "./src/bg_task_processor/aging_task/storage_aging_operation_processor.cpp",
    "./src/bg_task_processor/aging_task/trash_aging_operation_processor.cpp",
    "./src/bg_task_processor/bg_generate_thumbnail_task/do_thumbnail_bg_operation_processor.cpp",
    "./src/bg_task_processor/compatible_with_gallery_task/clean_invalid_cloud_album_and_data_processor.cpp",
    "./src/bg_task_processor/compatible_with_gallery_task/do_update_burst_from_gallery_processor.cpp",
    "./src/bg_task_processor/compatible_with_gallery_task/migrate_high_light_info_to_new_path_processor.cpp",
    "./src/bg_task_processor/dfx_task/upload_db_file_processor.cpp",
    "./src/bg_task_processor/preserve_db_task/analyze_photos_table_processor.cpp",
    "./src/bg_task_processor/preserve_db_task/check_db_backup_processor.cpp",
    "./src/bg_task_processor/preserve_db_task/wal_check_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/add_permission_for_cloud_enhancement_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/clear_beta_and_hdc_dirty_data_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/delete_cloud_media_assets_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/repair_history_dirty_data_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/repair_no_origin_photo_processor.cpp",
    "./src/bg_task_processor/repair_dirty_data_task/update_invalid_mime_type_processor.cpp",
    "./src/medialibrary_bg_task_manager.cpp",
    "./src/medialibrary_service_extension_napi.cpp",
    "./src/native_module_ohos_medialibrary_service_extension.cpp",
  ]

  deps = [
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension:medialibrary_data_extension",
    "${MEDIALIB_INTERFACES_PATH}/kits/js:medialibrary_nutils",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:napi_base_context",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "app_file_service:sandbox_helper_native",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_provider",
    "dfs_service:cloudsync_kit_inner",
    "e2fsprogs:libext2_uuid",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "i18n:intl_util",
    "image_framework:image_native",
    "init:libbegetutil",
    "kv_store:distributeddata_inner",
    "libxml2:libxml2",
    "napi:ace_napi",
    "os_account:libaccountkits",  # ohos_account
    "os_account:os_account_innerkits",  # os_account
    "player_framework:media_client",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
    "zlib:shared_libz",
  ]

  defines = []
  defines += [ "MEDIALIBRARY_COMPATIBILITY=1" ]
  defines += [ "META_RECOVERY_SUPPORT=1" ]

  if (media_library_feature_cloud_enhancement) {
    defines += [ "MEDIALIBRARY_FEATURE_CLOUD_ENHANCEMENT" ]
  }

  ldflags = [ "-Wl,-rpath=\$ORIGIN/" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  relative_install_dir = "module/multimedia"
  subsystem_name = "multimedia"
  part_name = "media_library"
}
