# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_library/media_library.gni")

ohos_executable("scanner") {
  install_enable = true

  include_dirs = []
  sources = [ "./src/medialibrary_scan.cpp" ]
  deps = []
  defines = []

  if (build_variant == "root") {
    include_dirs += [
      "./include",
      "${MEDIALIB_TEST_PATH}/unittest/get_self_permissions/include",
      "${MEDIALIB_INTERFACES_PATH}/innerkits/native/include",
      "${MEDIALIB_INNERKITS_PATH}/media_library_helper/include",
      "${MEDIALIB_SERVICES_PATH}/media_library/include",
    ]

    sources += [ "${MEDIALIB_TEST_PATH}/unittest/get_self_permissions/src/get_self_permissions.cpp" ]
    deps += [ "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension:medialibrary_data_extension" ]
    defines += [ "MEDIALIBRARY_SCANNER_START=1" ]

    external_deps = [
      "ability_base:zuri",
      "ability_runtime:abilitykit_native",
      "access_token:libaccesstoken_sdk",
      "access_token:libnativetoken_shared",
      "access_token:libtokensetproc_shared",
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "data_share:datashare_consumer",
      "hilog:libhilog",
      "hitrace:hitrace_meter",
      "ipc:ipc_single",
      "relational_store:native_appdatafwk",
      "samgr:samgr_proxy",
    ]

    ldflags = [ "-Wl,--gc-sections" ]

    cflags = [
      "-fdata-sections",
      "-ffunction-sections",
      "-Os",
    ]

    cflags_cc = [ "-Os" ]
  }

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
}
